style: fix vertical centering alignment of logo and links inside the navbar

--- a/src/app/components/custom-navbar/custom_navbar.css
+++ b/src/app/components/custom-navbar/custom_navbar.css
@@ -13,6 +13,7 @@
 
 .navbar .nav {
   width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
